--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,6 +32,7 @@ subjects:
 - !lcsh 'Sponge fisheries -- Florida -- Juvenile fiction'
 - !lcc 'PZ'
 - !lcsh 'Tarpon Springs (Fla.) -- Juvenile fiction'
+- GITenberg
 title: 'The Boy Chums in the Gulf of Mexico
 
   or, On a Dangerous Cruise with the Greek Spongers'
